# abc-quant

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEx_WALKLINE_REPORT_TONE_SPEC.md  CODEx_ZHU_WALKLINE_SHADOW_TASK.md  FILE_MANIFEST.txt  INBOX.md  OUTBOX.md  PROJECT_RULES.md  README.md  RUN_CODEX_NEXT.md  STATUS.md  TECH_LEAD_PROTOCOL.md  TODO.md  pyproject.toml  requirements.txt
config/: concept_stock_map.yaml  zhu_walkline_d10_deep_factor_research.yaml  zhu_walkline_d10_trajectory_optimizer.yaml  zhu_walkline_early_start_optimizer.yaml  zhu_walkline_full_market_early_start_replay.yaml  zhu_walkline_grouped_validation.yaml  zhu_walkline_shadow.yaml  zhu_walkline_shadow_decision_surface.yaml  zhu_walkline_shadow_strength_rules.csv
configs/: codex_closed_loop.yaml  default.yaml
docs/: architecture.md  codex_closed_loop.md  data_pipeline.md  feature_engineering.md  model_design.md  modeling.md  strategy.md  testing.md  zhu_walkline_2464_2026-07-14.md
prompts/: bugfix_prompt.md  codex_closed_loop_runner.md  codex_master.md  research_prompt.md  review_prompt.md
research/: experiments.md  ideas.md  papers.md
reviews/: chatgpt_review_003_zhu_walkline_observation_points.md  review_001.md  review_package_002.md  review_package_003_zhu_walkline_observation_points.md
scripts/: analyze_zhu_walkline_d10_deep_factors.py  analyze_zhu_walkline_driver_peak_windows.py  analyze_zhu_walkline_forward_return_buckets.py  analyze_zhu_walkline_grouped_validation.py  analyze_zhu_walkline_kd_d5_groups.py  analyze_zhu_walkline_kd_d5_lead_snapshots.py  analyze_zhu_walkline_kd_d5_pre_signal_features.py  analyze_zhu_walkline_shadow_decision_surface.py  backtest_zhu_walkline_driver_screen.py  backtest_zhu_walkline_shadow_range.py  build_review_package.py  check_project.ps1  codex_loop_guard.py  experiment_zhu_walkline_strategy.py  export_zhu_walkline_early_observation_candidates.py  optimize_zhu_walkline_d10_trajectory.py  optimize_zhu_walkline_early_start_parameters.py  replay_zhu_walkline_full_market_early_start.py  run_codex_closed_loop.ps1  run_zhu_walkline_shadow.py  (+3 more)
(+152 files in other folders)
