[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abc-quant"
version = "0.0.2"
description = "ABC Quant AI Research Platform for Taiwan equity research"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "PyYAML>=6.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.5.0",
    "mypy>=1.8.0",
]

[project.scripts]
abc-quant-modeling-smoke = "abc_quant.cli.modeling_smoke:main"
abc-quant-preprocessing-smoke = "abc_quant.cli.preprocessing_smoke:main"
abc-quant-supervised-smoke = "abc_quant.cli.supervised_smoke:main"
abc-quant-linear-regression-smoke = "abc_quant.cli.linear_regression_smoke:main"
abc-quant-model-comparison-smoke = "abc_quant.cli.model_comparison_smoke:main"
abc-quant-lightgbm-dependency-smoke = "abc_quant.cli.lightgbm_dependency_smoke:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--basetemp=.tmp_pytest -p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
